--- a/hestegenerator/hestespill_css.css
+++ b/hestegenerator/hestespill_css.css
@@ -232,3 +232,42 @@ li a {
     padding: 5px 16px;
     text-decoration: non
 }
+
+
+
+
+
+
+
+
+#quiz {
+  background-color: #f2f2f2;
+  padding: 20px;
+  width: 500px;
+  margin: auto;
+  font-family: sans-serif;
+}
+h1 {
+  text-align: center;
+  font-size: 22px;
+}
+ul {
+  padding: 0;
+  list-style: none;
+}
+label {
+  font-weight: bold;
+}
+input[type="submit"] {
+  background-color: #8b0000;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  margin-top: 10px;
+  cursor: pointer;
+}
+input[type="submit"]:hover {
+  background-color: #d60000;
+}
